--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,6 +13,8 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: "pypy-3.8"
-      - run: |
-          pip install cryptography>=40
+      - name: Test
+        run: |
+          set -eux
+          pip install "cryptography>=40"
           python -c "from cryptography.hazmat.backends.openssl.backend import backend"
