--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,9 +12,9 @@ jobs:
       - uses: "actions/checkout@v2"
       - uses: actions/setup-python@v4
         with:
-          python-version: "pypy3.7-v7.3.10"
+          python-version: "pypy3.7-v7.3.9"
       - name: Test
         run: |
           set -eux
-          pip install "cryptography>=40"
+          pip install .
           python -c "from cryptography.hazmat.backends.openssl.backend import backend"
